<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OLLA</string>
    <string name="app_subtitle">Offline Language Learning App</string>
    <string name="select_native_language">Select Native Language</string>
    <string name="select_target_language">Select Target Language</string>
    <string name="continue_text">Continue</string>
    <string name="create_profile">Create Profile</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="switch_profile">Switch Profile</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="welcome">Welcome</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="grammar">Grammar</string>
    <string name="quiz">Quiz</string>
    <string name="progress">Progress</string>
    <string name="profile">Profile</string>
    <string name="select_quiz">Select a Quiz</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="submit">Submit</string>
    <string name="question">Question</string>
    <string name="of">of</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="current_profile">Current Profile</string>
</resources>
